@@ -3,7 +3,9 @@ from ftw.builder import create
 from ftw.publisher.core.adapters.simplelayout_utils import is_sl_contentish
 from ftw.publisher.core.interfaces import IDataCollector
 from ftw.publisher.core.testing import PUBLISHER_CORE_INTEGRATION_TESTING
+from ftw.simplelayout.browser.blocks.base import BaseBlock
 from ftw.simplelayout.interfaces import IBlockConfiguration
+from ftw.simplelayout.interfaces import IBlockProperties
 from ftw.simplelayout.interfaces import IPageConfiguration
 from ftw.testing import staticuid
 from plone.app.testing import setRoles
@@ -12,6 +14,10 @@ from plone.uuid.interfaces import IUUID
 from Products.CMFCore.utils import getToolByName
 from unittest2 import TestCase
 from zope.component import getAdapter
+from zope.component import provideAdapter
+from zope.component import queryMultiAdapter
+from zope.interface import Interface
+from zope.publisher.interfaces.browser import IBrowserView
 import json
 
 
@@ -36,7 +42,8 @@ class TestSimplelayoutContentish(TestCase):
 
     def test_textblock_with_workflow_is_not_contentish(self):
         wftool = getToolByName(self.portal, 'portal_workflow')
-        wftool.setChainForPortalTypes(['ftw.simplelayout.TextBlock'], 'plone_workflow')
+        wftool.setChainForPortalTypes(
+            ['ftw.simplelayout.TextBlock'], 'plone_workflow')
         block = create(Builder('sl textblock')
                        .within(create(Builder('sl content page'))))
         self.assertFalse(is_sl_contentish(block))
@@ -70,7 +77,8 @@ class TestSimplelayoutPageAnnotations(TestCase):
 
     def test_data_getter(self):
         page = create(Builder('sl content page').titled(u'The Page'))
-        block = create(Builder('sl textblock').titled(u'The Block').within(page))
+        block = create(Builder('sl textblock').titled(
+            u'The Block').within(page))
 
         IPageConfiguration(page).store(
             {
@@ -99,7 +107,8 @@ class TestSimplelayoutPageAnnotations(TestCase):
 
     def test_data_setter(self):
         page = create(Builder('sl content page').titled(u'The Page'))
-        block = create(Builder('sl textblock').titled(u'The Block').within(page))
+        block = create(Builder('sl textblock').titled(
+            u'The Block').within(page))
         component = getAdapter(page, IDataCollector,
                                name='ftw.simplelayout:SimplelayoutPageAnnotations')
         component.setData(
@@ -134,7 +143,8 @@ class TestSimplelayoutBlockAnnotations(TestCase):
 
     def test_data_getter(self):
         page = create(Builder('sl content page').titled(u'The Page'))
-        block = create(Builder('sl textblock').titled(u'The Block').within(page))
+        block = create(Builder('sl textblock').titled(
+            u'The Block').within(page))
 
         IBlockConfiguration(block).store({'scale': 'sl_textblock_small'})
 
@@ -145,7 +155,8 @@ class TestSimplelayoutBlockAnnotations(TestCase):
 
     def test_data_setter(self):
         page = create(Builder('sl content page').titled(u'The Page'))
-        block = create(Builder('sl textblock').titled(u'The Block').within(page))
+        block = create(Builder('sl textblock').titled(
+            u'The Block').within(page))
         component = getAdapter(block, IDataCollector,
                                name='ftw.simplelayout:SimplelayoutBlockAnnotations')
         component.setData({'scale': 'sl_textblock_small'}, {})
@@ -183,15 +194,19 @@ class TestRemoveDeletedSLContentishChildren(TestCase):
         component = getAdapter(page, IDataCollector,
                                name='ftw.simplelayout:RemoveDeletedSLContentishChildren')
 
-        self.assertEquals(['textblock', 'listing', 'subpage'], page.objectIds())
+        self.assertEquals(
+            ['textblock', 'listing', 'subpage'], page.objectIds())
         component.setData([u'staticuid00000000000000000000002'], {})
         self.assertEquals(['textblock', 'subpage'], page.objectIds())
 
     @staticuid('staticuid')
     def test_getter_on_plone_site_returns_contentish_block_uids(self):
-        create(Builder('sl textblock').titled(u'TextBlock').within(self.portal))
-        create(Builder('sl listingblock').titled(u'Listing').within(self.portal))
-        create(Builder('sl content page').titled(u'SubPage').within(self.portal))
+        create(Builder('sl textblock').titled(
+            u'TextBlock').within(self.portal))
+        create(Builder('sl listingblock').titled(
+            u'Listing').within(self.portal))
+        create(Builder('sl content page').titled(
+            u'SubPage').within(self.portal))
 
         component = getAdapter(self.portal, IDataCollector,
                                name='ftw.simplelayout:RemoveDeletedSLContentishChildren')
@@ -201,9 +216,12 @@ class TestRemoveDeletedSLContentishChildren(TestCase):
 
     @staticuid('staticuid')
     def test_setter_on_plone_site_deletes_not_listed_blocks(self):
-        create(Builder('sl textblock').titled(u'TextBlock').within(self.portal))
-        create(Builder('sl listingblock').titled(u'Listing').within(self.portal))
-        create(Builder('sl content page').titled(u'SubPage').within(self.portal))
+        create(Builder('sl textblock').titled(
+            u'TextBlock').within(self.portal))
+        create(Builder('sl listingblock').titled(
+            u'Listing').within(self.portal))
+        create(Builder('sl content page').titled(
+            u'SubPage').within(self.portal))
 
         component = getAdapter(self.portal, IDataCollector,
                                name='ftw.simplelayout:RemoveDeletedSLContentishChildren')
@@ -221,7 +239,8 @@ class TestRemoveDeletedSLContentishChildren(TestCase):
     @staticuid('staticuid')
     def test_getter_on_textblock_returns_empyt_list(self):
         page = create(Builder('sl content page').titled(u'Page'))
-        block = create(Builder('sl textblock').titled(u'TextBlock').within(page))
+        block = create(Builder('sl textblock').titled(
+            u'TextBlock').within(page))
 
         component = getAdapter(block, IDataCollector,
                                name='ftw.simplelayout:RemoveDeletedSLContentishChildren')
@@ -231,7 +250,8 @@ class TestRemoveDeletedSLContentishChildren(TestCase):
     @staticuid('staticuid')
     def test_setter_on_textblock_does_not_break(self):
         page = create(Builder('sl content page').titled(u'Page'))
-        block = create(Builder('sl textblock').titled(u'TextBlock').within(page))
+        block = create(Builder('sl textblock').titled(
+            u'TextBlock').within(page))
 
         component = getAdapter(block, IDataCollector,
                                name='ftw.simplelayout:RemoveDeletedSLContentishChildren')
@@ -240,7 +260,8 @@ class TestRemoveDeletedSLContentishChildren(TestCase):
     @staticuid('staticuid')
     def test_getter_on_folderish_block_returns_children_uuids(self):
         page = create(Builder('sl content page').titled(u'Page'))
-        listing = create(Builder('sl listingblock').titled(u'Listing').within(page))
+        listing = create(Builder('sl listingblock').titled(
+            u'Listing').within(page))
         create(Builder('file').titled(u'Foo').within(listing))
         create(Builder('file').titled(u'Bar').within(listing))
 
@@ -253,7 +274,8 @@ class TestRemoveDeletedSLContentishChildren(TestCase):
     @staticuid('staticuid')
     def test_setter_on_folderish_block_removes_all_childrens_which_are_not_listed(self):
         page = create(Builder('sl content page').titled(u'Page'))
-        listing = create(Builder('sl listingblock').titled(u'Listing').within(page))
+        listing = create(Builder('sl listingblock').titled(
+            u'Listing').within(page))
         create(Builder('file').titled(u'Foo').within(listing))
         create(Builder('file').titled(u'Bar').within(listing))
 
@@ -263,3 +285,49 @@ class TestRemoveDeletedSLContentishChildren(TestCase):
         self.assertEquals(['foo', 'bar'], listing.objectIds())
         component.setData([u'staticuid00000000000000000000003'], {})
         self.assertEquals(['foo'], listing.objectIds())
+
+
+class TestSimplelayoutBlockLayoutProperty(TestCase):
+    layer = PUBLISHER_CORE_INTEGRATION_TESTING
+
+    def setUp(self):
+        self.portal = self.layer['portal']
+        setRoles(self.portal, TEST_USER_ID, ['Manager'])
+
+        class SampleBlockViewDifferent(BaseBlock):
+
+            def __call__(self):
+                return 'OK - different view'
+
+        provideAdapter(SampleBlockViewDifferent,
+                       adapts=(Interface, Interface),
+                       provides=IBrowserView,
+                       name='block_view_different')
+
+    def test_get_layout_property(self):
+        page = create(Builder('sl content page').titled(u'Page'))
+        block = create(Builder('sl textblock')
+                       .titled(u'TextBlock')
+                       .within(page))
+
+        component = getAdapter(block, IDataCollector,
+                               name='ftw.simplelayout:SimplelayoutBlockProperties')
+
+        self.assertEquals('block_view', component.getData())
+
+    def test_set_layout_property(self):
+        page = create(Builder('sl content page').titled(u'Page'))
+        block = create(Builder('sl textblock')
+                       .titled(u'TextBlock')
+                       .within(page))
+
+        component = getAdapter(block, IDataCollector,
+                               name='ftw.simplelayout:SimplelayoutBlockProperties')
+
+        component.setData('block_view_different', {})
+
+        properties = queryMultiAdapter((block, block.REQUEST),
+                                       IBlockProperties)
+
+        self.assertEquals('block_view_different',
+                          properties.get_current_view_name())
